zzub_typedefs.h was being hidden by the wild .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.com
 *.class
+: Building targets ...
 *.dll
 *.exe
 *.o
@@ -43,7 +44,8 @@ libneil/options.conf
 options.conf
 libneil/src/libzzub/libzzub.def
 libneil/include/zzub/zzub.h
-libneil/include/zzub/zzub*.h
+libneil/include/zzub/zzub_api.h
+libneil/include/zzub/zzub_data.h
 libneil/include/zzub/signature.h
 libneil/src/pyzzub/zzub/
 libneil/src/plugins/vstadapter/VST_SDK_2.4
