change zidl, use data structures from cpp header cv_connections.h instead of generating them in zzub/data.h

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "libneil/src/loguru"]
 	path = libneil/src/loguru
 	url = https://github.com/emilk/loguru
+[submodule "libneil/src/gist"]
+	path = libneil/src/gist
+	url = https://github.com/adamstark/Gist
