--- a/libneil/src/plugins/green_milk/SConscript
+++ b/libneil/src/plugins/green_milk/SConscript
@@ -19,7 +19,7 @@
 Import('pluginenv', 'build_plugin')
 
 localenv = pluginenv.Clone()
-localenv.Append(CPPPATH=["${KISSFFT_SRC_PATH}"])
+localenv.Append(CPPPATH=["${KISS_FFT_SRC_PATH}"])
 localenv.Append(LIBS=['kissfft'])
 localenv.Append(CPPFLAGS=['-O3'])
 
