--- a/presets/SConscript
+++ b/presets/SConscript
@@ -23,5 +23,5 @@ import os
 for filename in glob.glob('*.prs'):
 	install('${SHARE_PATH}/presets', filename, 0o644)
 
-main_env.Install(dir='${SETTINGS_PATH}', source='${SRC_PATH}/presets/mdaDrumLibrary')
+install('${SETTINGS_PATH}/', source='${SRC_PATH}/presets/mdaDrumLibrary')
 
