--- a/themes/SConscript
+++ b/themes/SConscript
@@ -21,6 +21,11 @@
 
 Import('install')
 
-import glob
+import os, glob
 install("${SHARE_PATH}/themes", glob.glob("*.col"), 0o644)
+
+# main_env.Install(dir='${SETTINGS_PATH}', source='${SRC_PATH}/themes')
+for dir in [file for file in glob.glob('*') if os.path.isdir(file)]:
+    for theme_file in glob.glob(dir + '/*'):
+        install("${SETTINGS_PATH}/themes/" + dir, theme_file)
 
