link lanternfish and kissfft libraries in all subprojects/scons env

--- a/libneil/src/libzzub/SConscript
+++ b/libneil/src/libzzub/SConscript
@@ -73,6 +73,8 @@ localenv.Append(
         localenv['LIB_COMPAT'],
         'pugixml',
         'minizip',
+        'lanternfish',
+        'kissfft',
         'ssl',
         'pthread',
         'm',
