copy signature file into main src dir to reduce ide error noise

--- a/libneil/SConscript
+++ b/libneil/SConscript
@@ -712,7 +712,7 @@ Export(
 
 # generate signature
 env.Signature(target='include/zzub/signature.h', source=options_conf_file)
-
+env.Signature(target='${SRC_PATH}/libneil/include/zzub/signature.h', source=options_conf_file)
 
 
 ##############################################################################
