--- a/src/components/SConscript
+++ b/src/components/SConscript
@@ -24,8 +24,8 @@ for filename in glob.glob('*.neil-component'):
 	install('${SHARE_PATH}/components', filename)
 
 for filename in glob.glob('*.py'):
-	install('${SHARE_PATH}/components', filename)
+    install('${SHARE_PATH}/components', filename)
 
-for (modulename, _) in [os.path.split(filename) for filename in glob.glob('**/__init__.py')]:
-    for (dirname, filename) in [os.path.split(filename) for filename in glob.glob(f'{modulename}/*')]:
+for (modulename, _) in [os.path.split(filename) for filename in glob.glob('**/__init__.py', recursive=True)]:
+    for (dirname, filename) in [os.path.split(filename) for filename in glob.glob(f'{modulename}/*.py')]:
         install('${SHARE_PATH}/components/' + dirname, dirname + '/' + filename)
