--- a/etc/SConscript
+++ b/etc/SConscript
@@ -21,6 +21,5 @@
 Import('main_env', 'install', 'install_recursive')
 import glob
 
-#install('${ETC_PATH}', 'neil.cfg', 0644)
-main_env.BuildPathConfig('${ETC_PATH}/path.cfg', ['${BUILD_PATH}/options.conf', '${SRC_PATH}/SConstruct'])
+main_env.BuildPathConfig('${SHARE_PATH}/path.cfg', ['${BUILD_PATH}/options.conf', '${SRC_PATH}/SConstruct'])
 
