--- a/src/components/SConscript
+++ b/src/components/SConscript
@@ -29,3 +29,6 @@ for filename in glob.glob('*.py'):
 for (modulename, _) in [os.path.split(filename) for filename in glob.glob('**/__init__.py', recursive=True)]:
     for (dirname, filename) in [os.path.split(filename) for filename in glob.glob(f'{modulename}/*.py')]:
         install('${SHARE_PATH}/components/' + dirname, dirname + '/' + filename)
+
+    for (dirname, filename) in [os.path.split(filename) for filename in glob.glob(f'{modulename}/*.json')]:
+        install('${SHARE_PATH}/components/' + dirname, dirname + '/' + filename)
